ActionBar Title changed to "Question #n" , now only for n=1. Colour of that text set to black. still no input vars in the method SetActionBarForQuiz(????)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="colorEven">#ffd6d7</color>
-    <color name="colorOdd">#c0d6e4</color>
+    <color name="colorEven">#FFD6D7</color>
+    <color name="colorOdd">#C0D6E4</color>
 </resources>
