--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="one_dp">1dp</dimen>
     <dimen name="xsmall_margin">4dp</dimen>
     <dimen name="small_margin">8dp</dimen>
-    <dimen name="large_margin">16dp</dimen>
-    <dimen name="xlarge_margin">24dp</dimen>
+    <dimen name="margin">16dp</dimen>
+    <dimen name="large_margin">24dp</dimen>
+    <dimen name="xlarge_margin">32dp</dimen>
     <dimen name="xxlarge_margin">48dp</dimen>
+    <dimen name="xxxlarge_margin">56dp</dimen>
     <dimen name="icon_size">20dp</dimen>
     <dimen name="logo_size">200dp</dimen>
     <dimen name="mini">14sp</dimen>
     <dimen name="small">16sp</dimen>
     <dimen name="medium">20sp</dimen>
     <dimen name="large">24sp</dimen>
-    <dimen name="xlarge">34sp</dimen>
+    <dimen name="xlarge">32sp</dimen>
     <dimen name="xxlarge">48sp</dimen>
     <dimen name="xxxlarge">56sp</dimen>
     <dimen name="circle">115dp</dimen>
