--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,11 +27,13 @@
     <color name="t006">#C0D6E4</color>
     <color name="t007">#C0D6E4</color>
     <color name="t008">#C0D6E4</color>
-    <color name="t009">#C0D6E4</color>
     <color name="t00A">#C0D6E4</color>
     <color name="t00C">#C0D6E4</color>
     <color name="t00D">#C0D6E4</color>
     <color name="t00E">#C0D6E4</color>
+
+    <color name="t009">#C0D6E4</color>
+    <color name="t00B">#C0D6E4</color>
     <color name="t00F">#C0D6E4</color>
 
     <!-- test -->
@@ -43,12 +45,13 @@
     <color name="t06">#52a4b4</color>
     <color name="t07">#3F51B5</color>
     <color name="t08">#de215d</color>
-    <color name="t09">#dde22f</color>
     <color name="t0A">#735313</color>
-    <color name="t0B">#4BDC62</color>
-    <color name="t0C">#fbdcf8</color>
+    <color name="t0C">#b8807d</color>
     <color name="t0D">#f43f59</color>
-    <color name="t0E">#1b9b2e</color>
-    <color name="t0F">#baa622</color>
+    <color name="t0E">#4BDC62</color>
+
+    <color name="t09">#dde22f</color>
+    <color name="t0B">#1b9b2e</color>
+    <color name="t0F">#05c4ef</color>
 
 </resources>
